--- a/character.css
+++ b/character.css
@@ -1,5 +1,6 @@
 .characterBox {
-  width: 300px;
+  width: 460px;
+  height: 800px;
   padding: 16px;
   border: 1px solid #9e9e9e;
   background-color: #363636;
@@ -7,8 +8,101 @@
 }
 
 .charImageContainer {
-  width: 100%;
-  height: 300px;
+  width: 90%;
+  height: 400px;
+  margin: auto;
   overflow: hidden;
   margin-bottom: 12px;
+  margin-top: 12px;
+  border-radius: 5px;
+  border: solid 2px #9e9e9e;
+}
+
+.characterMenu {
+  display: flex;
+}
+
+.charMen {
+  border: solid 1px #7a7a7a;
+  border-bottom: solid 4px #7a7a7a;
+  padding: 15px;
+  width: 340px;
+  text-align: center;
+  margin-right: 20px;
+}
+
+.charMen:hover {
+  background-color: #6161b8;
+}
+
+.charMen.active {
+  border-bottom: solid 4px #ffffff;
+}
+
+.charMen p {
+  font-family: monospace;
+  font-size: 16px;
+  color: white;
+}
+
+.flexMenu {
+  display: flex;
+}
+
+.toggleBox {
+  display: flex;
+  width: 100%;
+  justify-content: right;
+  margin-right: 24px;
+}
+
+.switch input {
+  width: 0;
+  height: 0;
+  opacity: 0;
+}
+
+.switch {
+  display: block;
+  position: relative;
+  width: 3.5em;
+  height: 2em;
+}
+
+.slider {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #404040;
+  border: solid 1px white;
+  transition: 0.4s;
+  border-radius: 5px;
+}
+
+.slider::before {
+  position: absolute;
+  content: "♀";
+  color: white;
+  font-size: 1em;
+  font-weight: bolder;
+  text-shadow: 0 0 1px white, 0 0 1px white;
+  height: 1.4em;
+  width: 1.4em;
+  left: 0.3em;
+  top: 50%;
+  transform: translateY(-50%);
+  background: linear-gradient(40deg, #ff6146, #ff8ab7 70%);
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background: #404040;
+}
+
+input:checked + .slider::before {
+  content: "♂";
+  left: calc(100% - (1.4em + 0.3em));
+  background: linear-gradient(40deg, #8c7ddd, #2ab4cc 70%);
 }
