--- a/character.css
+++ b/character.css
@@ -7,6 +7,14 @@
   text-align: center;
 }
 
+.characterName {
+  font-family: monospace;
+  font-size: 18px;
+  font-weight: bolder;
+  color: white;
+  margin-left: 35%;
+}
+
 .charImageContainer {
   width: 90%;
   height: 400px;
@@ -16,6 +24,38 @@
   margin-top: 12px;
   border-radius: 5px;
   border: solid 2px #9e9e9e;
+}
+
+.characterStats {
+  width: 416px;
+  height: 35%;
+  margin: auto;
+  margin-top: 5%;
+  border-radius: 5px;
+  border: solid 2px #9e9e9e;
+  display: flex;
+  flex-direction: column;
+}
+
+.characterStats p {
+  flex: 1 1 0;
+  margin: 0;
+  padding-left: 6px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  font-family: monospace;
+  font-size: 15px;
+  text-align: left;
+  color: white;
+  box-sizing: border-box;
+}
+
+.line1 {
+  background-color: #494949;
+}
+
+.line2 {
+  background-color: #6e6e6e;
 }
 
 .characterMenu {
